--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
-    "@types/node": "18.14.0",
+    "@prisma/client": "^4.10.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.4",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
+    "prisma-client": "^0.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.7.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.14.0",
+    "prisma": "^4.10.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
